--- a/src/components/1.navBar/navBar.css
+++ b/src/components/1.navBar/navBar.css
@@ -8,6 +8,8 @@ nav{
     background-color: var(--bg_default);
     margin-left: 2rem;
     margin-right: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .drakBtn:hover{
