--- a/src/components/3.1.2. searchFilter/filter.css
+++ b/src/components/3.1.2. searchFilter/filter.css
@@ -1,5 +1,28 @@
-.selectors{
+.select-label-container{
+
     display: flex;
-    border-radius: 4px;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-left: 1px solid var(--lines-color);
+    align-items: flex-start;
+    min-width: 160px;
+    width: 100%;
+    background-color: var(--bg_default);
     
+border-bottom-right-radius: 5px;
+border-top-right-radius:5px;
+    
+}
+
+.selector{
+    border: none;
+    background: none;
+    padding-left: 8px;
+    color: var(--body-text);
+    
+}
+
+.label{
+    font-size: 0.7rem;
+    padding-left: 11px;
 }
